* Changelog
  
  All notable changes to this project will be documented in this file.

  The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
  and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
  
** Unreleased
*** Added

*** Changed

*** Removed

** 0.3.0 - 2019-07-30
*** Added
    - alias =elisp-koans= to =elisp-koans/run-tests=

*** Changed
    - fix paren nesting bug in =elisp-koans/run-test=

** 0.2.0 - 2019-07-30
*** Added
    - interactive function =elisp-koans/run-tests= for running all tests or
      a specific koan group
    - interactive function =elisp-koans/run-test= for running a single test
    - koan selection to =elisp-koans/select-group=

*** Changed
    - fix test names lacking =elisp-koans/= prefix

*** Removed
    - commented out / unused assertions

** 0.1.0 - 2019-07-26
*** Added
    - this changelog
    - elisp-koans test groups from lisp-koans

*** Changed
    - =README.org= to provide an accurate usage description
    - elisp-koans tests to use ERT for test definitions, assertions, and runners